--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "crwn-clothing",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://jdibart.github.io/momo-botan/",
+  "private": true
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.17.1",
+    "gh-pages": "^3.1.0",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -26,9 +26,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"yarn build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
